--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "fergusean/nusoap",
+    "name": "angelpublishing/nusoap",
     "description": "NuSOAP re-packaged for Packagist/Composer",
     "license": "LGPLv2",
     "authors": [
@@ -10,6 +10,10 @@
         {
             "name": "Scott Nichol",
             "homepage": "http://sourceforge.net/u/snichol/profile/"
+        },
+        {
+            "name": "Angel Publishing",
+            "homepage": "https://github.com/angelpublishing"
         }
     ],
     "autoload": {
